--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
       background-color: rgba(255, 0, 0, 0.15);
       color: #8b0000;
     }
-    .distress {
+    .frustration {
       background-color: rgba(255, 165, 0, 0.15);
       color: #b34700;
     }
-    .resignation {
+    .disappointment {
       background-color: rgba(30, 144, 255, 0.15);
       color: #005d99;
     }
-    .confusion {
+    .relief {
       background-color: rgba(128, 0, 128, 0.15);
       color: #4b006e;
     }
@@ -127,9 +127,9 @@
   <div class="legend">
     <strong style="margin-right: 10px;">Emotion Key:</strong>
     <div class="legend-item"><span class="legend-dot dot-anger"></span> Anger</div>
-    <div class="legend-item"><span class="legend-dot dot-distress"></span> Distress</div>
-    <div class="legend-item"><span class="legend-dot dot-resignation"></span> Resignation</div>
-    <div class="legend-item"><span class="legend-dot dot-confusion"></span> Confusion</div>
+    <div class="legend-item"><span class="legend-dot dot-frustration"></span> Frustration</div>
+    <div class="legend-item"><span class="legend-dot dot-disappointment"></span> Disappointment</div>
+    <div class="legend-item"><span class="legend-dot dot-relief"></span> Relief</div>
   </div>
 
   <div class="container" id="dialogue">
