--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       margin-left: 8px;
     }
     .dot-anger { background-color: #e60000; }
-    .dot-distress { background-color: #ff8c00; }
-    .dot-resignation { background-color: #1e90ff; }
-    .dot-confusion { background-color: #800080; }
+    .dot-frustration { background-color: #ff8c00; }
+    .dot-disappointment { background-color: #1e90ff; }
+    .dot-relief { background-color: #800080; }
 
     .container {
       background-color: white;
